# cx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.claude/: CLAUDE.md  工作流程.md  行为准则.md
clients/python/: README.md  ga_core_client.py  setup.py
docs/: ACCEPTANCE_CRITERIA.md
docs/superpowers/plans/: 2026-06-14-cx-mvp-implementation.md  2026-06-14-genericagent-rust-core.md
docs/superpowers/specs/: 2026-06-14-cx-architecture-design.md  2026-06-14-genericagent-rust-core-design.md
src/: lib.rs  main.rs
src/agent/: handler.rs  loop.rs  mod.rs  outcome.rs
src/api/: mod.rs  routes.rs  websocket.rs
src/browser/: driver.rs  mod.rs  session.rs
src/cli/: config_cmd.rs  mod.rs  run.rs  server.rs
src/config/: loader.rs  manager.rs  mod.rs  model.rs  provider.rs
src/core/: executor.rs  mod.rs  printer.rs  stream.rs
src/llm/: claude.rs  client.rs  mixin.rs  mod.rs  models.rs  openai.rs
src/tools/: code_run.rs  file_ops.rs  memory.rs  mod.rs  user.rs  web.rs
src/utils/: html.rs  mod.rs  paths.rs
tests/: integration_tests.rs
