[package]
name = "ga-core"
version = "0.1.0"
edition = "2021"
authors = ["GenericAgent Team"]
description = "Core engine for GenericAgent - Rust replacement for agent_loop.py, ga.py, and llmcore.py"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
regex = "1.10"
scraper = "0.19"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
notify = "6.1"
tokio-stream = "0.1"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
